refactor: isolate condition evaluation sessions